ignore links and dataset

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,6 @@ P1_Facial_Keypoints
 .ipynb_checkpoints
 deep_learning_udacity
 computer_vision_udacity
+python_manual.txt
+PennFundanPed
+PennFundanPed.zip
