--- a/.gitignore
+++ b/.gitignore
@@ -5,5 +5,5 @@ P1_Facial_Keypoints
 deep_learning_udacity
 computer_vision_udacity
 python_manual.txt
-PennFundanPed
-PennFundanPed.zip
+PennFudanPed
+PennFudanPed.zip
