--- a/03_yolo_v7_tutorial/lab/conda.yaml
+++ b/03_yolo_v7_tutorial/lab/conda.yaml
@@ -22,8 +22,10 @@ dependencies:
       - protobuf
       - opencv-python
       - opencv-contrib-python
+      - onnx>=1.9.0
       - onnxruntime
       - onnxruntime-gpu
+      - onnx-simplifier>=0.3.6
       - wandb
       - autopep8
       - joblib
