--- a/03_yolo_v7_tutorial/lab/conda.yaml
+++ b/03_yolo_v7_tutorial/lab/conda.yaml
@@ -24,7 +24,7 @@ dependencies:
       - opencv-contrib-python
       - onnx>=1.9.0
       - onnxruntime
-      - onnxruntime-gpu
+      #- onnxruntime-gpu
       - onnx-simplifier>=0.3.6
       - wandb
       - autopep8
